force-app/main/default/objects/Rescue_Opportunity__c/Rescue_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Interview invitations and rescue opportunities surfaced to candidates.</description>
    <label>Rescue Opportunity</label>
    <nameField>
        <displayFormat>RO-{00000}</displayFormat>
        <label>Rescue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rescue Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>