force-app/main/default/objects/Rescue_Opportunity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rescue Opportunities</relationshipLabel>
    <relationshipName>Rescue_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>