force-app/main/default/objects/Rescue_Opportunity__c/fields/Blakeney_Prep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Blakeney_Prep_Notes__c</fullName>
    <label>Blakeney Prep Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>