force-app/main/default/objects/Rescue_Opportunity__c/fields/Candidate_Availability_End__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Availability_End__c</fullName>
    <description>Candidate requested reschedule availability end.</description>
    <label>Candidate Availability End</label>
    <type>DateTime</type>
</CustomField>