force-app/main/default/objects/Rescue_Opportunity__c/fields/Candidate_Availability_Start__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Availability_Start__c</fullName>
    <description>Candidate requested reschedule availability start.</description>
    <label>Candidate Availability Start</label>
    <type>DateTime</type>
</CustomField>