force-app/main/default/objects/Rescue_Opportunity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rescue Opportunities</relationshipLabel>
    <relationshipName>Rescue_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>