force-app/main/default/objects/Rescue_Opportunity__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interview record created for this rescue opportunity.</description>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Rescue Opportunities</relationshipLabel>
    <relationshipName>Rescue_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>