force-app/main/default/objects/Rescue_Opportunity__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>Video</fullName><default>true</default><label>Video</label></value>
            <value><fullName>In-person</fullName><default>false</default><label>In-person</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>