force-app/main/default/objects/Rescue_Opportunity__c/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <label>Reschedule Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>